# cs180-23-thedreamteam

./: README.md
generic_db_backend/: .gitignore  Add.cpp  Add.h  CMakeLists.txt  CopyPast  Create.cpp  Create.h  Delete.cpp  Delete.h  Essential.cpp  Essential.h  Filter.cpp  Filter.h  Search.cpp  Search.h  Update.cpp  Update.h  View.cpp  View.h  a.out  collection.cpp  collection.h  colormod.h  document.cpp  document.h  main.cpp  new.json
generic_db_backend/db/phoneBook/: contacts.json  new.json  phoneNumbers.json
generic_db_backend/db/roses/: flowers.json  test.json
generic_db_backend/db/searchFile/: lib.json
generic_db_backend/src/: collection.cpp  collection.h  document.h
generic_db_frontend/: package-lock.json  package.json
